@@ -456,6 +456,7 @@ Release 0.91.0 - Unreleased
                (todd)
    HBASE-4071  Data GC: Remove all versions > TTL EXCEPT the last
                written version (Lars Hofhansl)
+   HBASE-4242  Add documentation for HBASE-4071 (Lars Hofhansl)
 
 Release 0.90.5 - Unreleased
 
